#
# Copyright 2021-2024 Software Radio Systems Limited
#
# This file is part of srsRAN
#
# srsRAN is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as
# published by the Free Software Foundation, either version 3 of
# the License, or (at your option) any later version.
#
# srsRAN is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
# GNU Affero General Public License for more details.
#
# A copy of the GNU Affero General Public License can be found in
# the LICENSE file in the top-level directory of this distribution
# and at http://www.gnu.org/licenses/.
#

#########
# Build #
#########
[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

###########
# Project #
###########
[project]
authors = [
  {name = "Software Radio Systems"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Development Status :: 5 - Production/Stable",
]
dependencies = [
  "influxdb-client < 2",
]
description = "srsRAN Metrics Server"
name = "srs_metrics_server"
readme = "README.md"
requires-python = ">=3.7"
version = "1.7.0"

[project.scripts]
metrics-server = "metrics_server.__main__:main"

#############
# Dev Tools #
#############
[tool.black]
line-length = 120

[tool.isort]
atomic = true
combine_as_imports = true
float_to_top = true
force_alphabetical_sort_within_sections = true
include_trailing_comma = true
line_length = 120
profile = "black"
remove_redundant_aliases = true

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
install_types = true
non_interactive = true
warn_return_any = true
warn_unused_configs = true

[tool.pylint]
ignore-signatures = true
max-line-length = 120

[tool.tox]
legacy_tox_ini = """
[tox]
minversion = 4.4.0
envlist = 
  format
  lint
  type
  build

[testenv:format]
skip_install = true
deps =
  black
  isort
commands =
  black --check --diff --color src
  isort --check src

[testenv:format_apply]
skip_install = true
deps =
  black
  isort
commands =
  black src
  isort src

[testenv:lint]
deps =
  pylint
commands =
  pylint src

[testenv:type]
skip_install = true
deps = 
  mypy
commands = 
  mypy src

[testenv:build]
skip_install = true
deps =
  build
commands =
  python -m build
"""
